--- a/NodejsConsoleApp1/ExpressApp1/views/index.pug
+++ b/NodejsConsoleApp1/ExpressApp1/views/index.pug
@@ -3,14 +3,20 @@ html
 include head.pug
 body
  .container
-  h2 Albumes de Muse
   for al in datalbum
-   .card(style='width:400px')   
-    img.card-img-top(id="mimg",alt='imag',src=al.im)
-    .card-body
-     h4.card-title #{al.nameal}
-     a.btn.btn-primary(href='#') Ver Canciones
-      
+   -var imagen=al.im;
+   -var nombre=al.nameal;
+   -var url=al.idal;
+   ul.list-unstyled
+    li.media
+     img.mr-3(src=imagen,width='300',height="300")
+     .media-body
+       h5.mt-0.mb-1 #{nombre}
+       a.btn.btn-primary(href="/ver/"+url)
+         | Ver Canciones
+ 
+       
+
     
    
 
